--- a/animationer.css
+++ b/animationer.css
@@ -15,3 +15,54 @@
     }
     
 }
+
+.glow {
+    animation-name: glow;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes glow {
+    0% {
+        filter: drop-shadow(0px 0px 0px rgb(216, 216, 32))
+
+    } 100% {
+        filter: drop-shadow(0px 0px 16px rgb(216, 216, 32))
+    }
+}
+
+.zoom_out {
+    animation-name: zoom_out;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes zoom_out {
+    from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.5);
+  }
+}
+
+.pulse {
+    animation-name: pulse;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+  } 70% {
+        transform: scale(1.2);
+  } 100% {
+        transform: scale(0.95);
+  }
+}
+
+
