--- a/animationer.css
+++ b/animationer.css
@@ -24,13 +24,12 @@
 
 @keyframes moveright {
     0% {
-        transform: translate(0, -100%);
+        transform: translate(-700%, -200%);
     }
 
     100% {
-        transform: translate(0,-100%);
+        transform: translate(600%,-200%);
     }
-    
 }
 
 .glow {
