--- a/style.css
+++ b/style.css
@@ -1,251 +1,226 @@
 body {
-    background-image: url('./images/bar.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    margin: auto;
+  background-image: url("./images/bar.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  margin: auto;
 }
 
 #screen {
-    aspect-ratio: 16/9;
-    display: grid;
-    grid-template: 100% / 100%;
-
+  aspect-ratio: 16/9;
+  display: grid;
+  grid-template: 100% / 100%;
 }
 
 #game {
-    grid-area: 1/1;
-    display: grid;
-    grid-template: 100% / 100%
+  grid-area: 1/1;
+  display: grid;
+  grid-template: 100% / 100%;
 }
 
 #game_background {
-    display: grid;
-    grid-area: 1/1;
-    background-image: url(images/bar.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    position: absolute;
+  display: grid;
+  grid-area: 1/1;
+  background-image: url(images/bar.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
 }
 
 #game_elements {
-    position: relative;
-    grid-area: 1 /1;
+  position: relative;
+  grid-area: 1 /1;
 }
 
-
-
-
-
 #cola1_container {
-    position: absolute;
-    left: 40%;
-    top: 70%;
-    width: 10%;
+  position: absolute;
+  left: 40%;
+  top: 70%;
+  width: 10%;
 }
 
 #cola2_container {
-    position: absolute;
-    left: 50%;
-    top: 70%;
-    width: 10%;
+  position: absolute;
+  left: 50%;
+  top: 70%;
+  width: 10%;
 }
 
 #cola3_container {
-    position: absolute;
-    left: 60%;
-    top: 70%;
-    width: 10%;
+  position: absolute;
+  left: 60%;
+  top: 70%;
+  width: 10%;
 }
 
-
 #cola1_container img {
-    width: 100%;
+  width: 100%;
 }
 
 #cola2_container img {
-    width: 100%;
+  width: 100%;
 }
 
 #cola3_container img {
+  width: 100%;
+}
+
+#fanta1_container {
+  position: absolute;
+  left: 25%;
+  top: 75%;
+  width: 50%;
+}
+
+#fanta2_container {
+  position: absolute;
+  left: 25%;
+  top: 50%;
+  width: 50%;
+}
+
+#fanta3_container {
+  position: absolute;
+  left: 25%;
+  top: 25%;
+  width: 50%;
+}
+
+
+
+
+
+
+#fanta1_container {
+    width: 8%;
+    position: absolute;
+}
+
+#fanta1_sprite {
     width: 100%;
 }
 
 
-#fanta1_container {
-    position: absolute;
-    left: 25%;
-    top: 75%;
-    width: 50%;
-}
-
-#fanta2_container {
-    position: absolute;
-    left: 25%;
-    top: 50%;
-    width: 50%;
-}
-
-#fanta3_container {
-    position: absolute;
-    left: 25%;
-    top: 25%;
-    width: 50%;
-}
 
 
 
 
-#fanta1_container img {
-    width: 8%;
-}
 
 #fanta2_container img {
-    width: 8%;
+  width: 8%;
 }
 
 #fanta3_container img {
-    width: 8%;
+  width: 8%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 #beer1_container {
-    position: absolute;
-    top: 10%;
-    left: 60%;
+  position: absolute;
+  top: 10%;
+  left: 60%;
 }
 
 #beer2_container {
-    position: absolute;
-    top: 30%;
-    left: 60%;
+  position: absolute;
+  top: 30%;
+  left: 60%;
 }
 
 #beer3_container {
-    position: absolute;
-    top: 50%;
-    left: 60%;
+  position: absolute;
+  top: 50%;
+  left: 60%;
 }
 
 #beer1_container img {
-    width: 15%;
+  width: 15%;
 }
 
 #beer2_container img {
-    width: 15%;
+  width: 15%;
 }
 
 #beer3_container img {
-    width: 15%;
+  width: 15%;
 }
 
-
-
-
-
-
-
 #laptop_container {
-    position: absolute;
-    width: 50%;
-    height: 50%;
+  position: absolute;
+  width: 50%;
+  height: 50%;
 }
 
 #laptop_container img {
-    width: 50%;
-    height: 50%;
+  width: 50%;
+  height: 50%;
 }
 
-
-
-
-
-
-
-
-
 #heart1_container {
-    position: absolute;
-    top: 0.1%;
-    right: -44%;
-    z-index: 2;
+  position: absolute;
+  top: 0.1%;
+  right: -44%;
+  z-index: 2;
 }
 
 #heart2_container {
-    position: absolute;
-    top: 0.1%;
-    right: -39%;
-    z-index: 2;
+  position: absolute;
+  top: 0.1%;
+  right: -39%;
+  z-index: 2;
 }
 
 #heart3_container {
-    position: absolute;
-    top: 0.1%;
-    right: -34%;
-    z-index: 2;
+  position: absolute;
+  top: 0.1%;
+  right: -34%;
+  z-index: 2;
 }
 
 #heart1_container img {
-    width: 15%;
+  width: 15%;
 }
 
 #heart2_container img {
-    width: 15%;
+  width: 15%;
 }
 
 #heart3_container img {
-    width: 15%;
+  width: 15%;
 }
 
 #timer_container {
-    position: absolute;
-    top: 1%;
-    left: 45%;
+  position: absolute;
+  top: 1%;
+  left: 45%;
 }
 
 #timer_container img {
-    width: 40%;
+  width: 40%;
 }
 
 #scoreboard_container {
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    width: 1%;
-    z-index: 2%;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 1%;
+  z-index: 2%;
 }
 
 #scoreboard img {
-    top: 5%;
-    left: 5%;
-    width: 20%;
-    z-index: 2%;
+  top: 5%;
+  left: 5%;
+  width: 20%;
+  z-index: 2%;
 }
 
+#start {
+}
 
-#start{}
+#game_over {
+}
 
-
-
-#game_over{}
-
-
-
-#level_complete {}
+#level_complete {
+}
