--- a/animationer.css
+++ b/animationer.css
@@ -48,6 +48,27 @@
     }
 }
 
+.zoom_in {
+    animation-name: zoom_in;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom_in {
+    0% {
+        transform: translate(0, 0) scale(1) rotate(0deg);
+    }
+    90% {
+        transform: translate(100%, 0) scale(15) rotate(90deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(100%, 0) scale(15) rotate(90deg);
+        opacity: 0;
+    }
+}
+
 .zoom_out {
     animation-name: zoom_out;
     animation-duration: 1s;
@@ -81,4 +102,39 @@
   }
 }
 
+.spiral {
+    animation-name: spiral;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    transform-origin: 50% 150%;
+}
 
+@keyframes spiral {
+    0% {
+        transform: rotate(0deg) scale(1);
+    }
+    100% {
+        transform: rotate(720deg) scale(0);
+    }
+}
+
+
+
+
+
+
+
+
+
+.active_heart {
+  filter: drop-shadow(0 0 2px yellow);
+}
+
+.broken_heart {
+  filter: grayscale(75%) blur(.5px);
+}
+
+.paused {
+  animation-play-state: paused;
+}
