--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   background-attachment: fixed;
   background-size: cover;
   margin: auto;
+  margin: 0;
+  overflow: hidden;
 }
 
 #screen {
@@ -141,7 +143,7 @@ body {
   width: 15%;
 }
 
-/************************************************* LAPTOP **********************************************/
+/************************************************* LAPTOP *********************************************/
 
 #laptop_container {
   position: absolute;
@@ -218,9 +220,10 @@ body {
   z-index: 2%;
 }
 
-/************************************************* GAME OVER **********************************************/
+/************************************************* GAME OVER ******************************************/
 
 #game_over {
+  position: absolute;
   grid-area: 1 /1;
   aspect-ratio: 16/9;
   display: grid;
@@ -231,9 +234,10 @@ body {
   z-index: 20;
 }
 
-/************************************************* LEVEL COMPLETE *****************************************/
+/************************************************* LEVEL COMPLETE *************************************/
 
 #level_complete {
+  position: absolute;
   grid-area: 1 /1;
   z-index: 999;
   display: grid;
