--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./images/bar.png");
+  background-image: url(/images/bar.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -34,7 +34,6 @@ body {
   height: 100%;
   width: 100%;
   z-index: -1;
-  position: absolute;
 }
 
 #game_elements {
@@ -50,7 +49,7 @@ body {
   width: 10%;
 }
 
-#cola1_container img {
+#cola1_sprite {
   width: 100%;
 }
 
@@ -61,7 +60,7 @@ body {
   width: 10%;
 }
 
-#cola2_container img {
+#cola2_sprite {
   width: 100%;
 }
 
@@ -72,7 +71,7 @@ body {
   width: 10%;
 }
 
-#cola3_container img {
+#cola3_sprite {
   width: 100%;
 }
 
@@ -85,7 +84,7 @@ body {
   width: 50%;
 }
 
-#fanta1_container img {
+#fanta1_sprite {
   width: 8%;
 }
 
@@ -96,7 +95,7 @@ body {
   width: 50%;
 }
 
-#fanta2_container img {
+#fanta2_sprite {
   width: 8%;
 }
 
@@ -107,7 +106,7 @@ body {
   width: 50%;
 }
 
-#fanta3_container img {
+#fanta3_sprite {
   width: 8%;
 }
 
@@ -119,7 +118,7 @@ body {
   left: 60%;
 }
 
-#beer1_container img {
+#beer1_sprite {
   width: 15%;
 }
 
@@ -129,7 +128,7 @@ body {
   left: 60%;
 }
 
-#beer2_container img {
+#beer2_sprite {
   width: 15%;
 }
 
@@ -139,7 +138,7 @@ body {
   left: 60%;
 }
 
-#beer3_container img {
+#beer3_sprite {
   width: 15%;
 }
 
@@ -158,36 +157,36 @@ body {
 
 /************************************************* HEART **********************************************/
 
-#heart_container1 {
+#heart1_container {
   position: absolute;
   top: 0.1%;
   right: -44%;
   z-index: 2;
 }
 
-#heart_container1 img {
+#heart1_container img {
   width: 15%;
 }
 
-#heart_container2 {
+#heart2_container {
   position: absolute;
   top: 0.1%;
   right: -39%;
   z-index: 2;
 }
 
-#heart_container2 img {
+#heart2_container img {
   width: 15%;
 }
 
-#heart_container3 {
+#heart3_container {
   position: absolute;
   top: 0.1%;
   right: -34%;
   z-index: 2;
 }
 
-#heart_container3 img {
+#heart3_container img {
   width: 15%;
 }
 
@@ -239,12 +238,12 @@ body {
 #level_complete {
   position: absolute;
   grid-area: 1 /1;
-  z-index: 999;
   display: grid;
   justify-content: center;
   align-content: center;
   background-image: linear-gradient(150deg, #20c903 0%, #09793b 100%);
   color: #ffffff;
+  z-index: 999;
 }
 
 .active_heart {
