--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
 body {
-  background-image: url(/images/bar.png);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  margin: auto;
   margin: 0;
   overflow: hidden;
 }
@@ -221,7 +216,7 @@ body {
 
 /************************************************* GAME OVER ******************************************/
 
-#game_over {
+/* #game_over {
   position: absolute;
   grid-area: 1 /1;
   aspect-ratio: 16/9;
@@ -231,11 +226,11 @@ body {
   background-image: linear-gradient(150deg, #c90303 0%, #790909 100%);
   color: #ffffff;
   z-index: 20;
-}
+} */
 
 /************************************************* LEVEL COMPLETE *************************************/
 
-#level_complete {
+/* #level_complete {
   position: absolute;
   grid-area: 1 /1;
   display: grid;
@@ -244,6 +239,21 @@ body {
   background-image: linear-gradient(150deg, #20c903 0%, #09793b 100%);
   color: #ffffff;
   z-index: 999;
+} */
+
+#game_over {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #c90303;
+  
+}
+
+#level_complete {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #20c903;
 }
 
 .active_heart {
@@ -258,9 +268,8 @@ body {
   animation-play-state: paused;
 }
 
-.hidden,
-#game_over.hidden,
-#level_complete.hidden {
+.hidden {
+  visibility: hidden;
   display: none;
 }
 
