--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
 }
 
 h2 {
-    font-size: 4em;
-    margin: 0;
+  font-size: 4em;
+  margin: 0;
 }
 
 p {
-    text-align: center;
-    font-size: 1.3em;
-    margin: 1em 0;
+  text-align: center;
+  font-size: 1.3em;
+  margin: 1em 0;
 }
 
 button {
@@ -86,7 +86,7 @@ button {
 #level_complete.hidden,
 #game.hidden,
 #start.hidden {
-    display: none;
+  display: none;
 }
 
 /************************************************* POSITIONING ELEMENTS ******************************/
@@ -272,6 +272,8 @@ button {
   color: white;
   font-size: 2em;
   pointer-events: none;
+  height: 100%;
+  width: 100%;
 }
 
 #scoreboard_container {
@@ -290,25 +292,27 @@ button {
 /************************************************* TIMER **********************************************/
 
 #time_board {
-    position: relative;
+  position: relative;
 }
 
 #time_container {
-    position: absolute;
-    width: 100%;
-    aspect-ratio: 30/6;
-    border: 2px solid black;
-    background-color: rgba(208, 204, 204, 0.383);
-    top: 1.6vh;
-    right: 0.2vw;
+  position: absolute;
+  width: 20%;
+  
+  aspect-ratio: 6/30;
+  border: 2px solid black;
+  background-color: rgba(208, 204, 204, 0.383);
+  top: 8vh;
+  right: 0.2vw;
+  transform: rotate(90deg);
 }
 
 #time_sprite {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: limegreen;
-    transform-origin: right;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: limegreen;
+  transform-origin: center;
 }
 
 .active_heart {
@@ -322,126 +326,6 @@ button {
 .paused {
   animation-play-state: paused;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ************************************************ TIMER *********************************************
 
@@ -501,7 +385,6 @@ button {
   color: #ffffff;
   z-index: 999;
 } */
-
 
 /* .hidden {
   visibility: hidden;
